--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -18,7 +18,8 @@
     
 
     <app-product-alerts [product]="product"
-    (notify)="onNotify()"
+    (notify)="onNotify
+    ()"
     ></app-product-alerts>
 </div>
 
